fix(Tooltip): should use the default text alignment

--- a/src/Tooltip/styles/index.less
+++ b/src/Tooltip/styles/index.less
@@ -16,7 +16,6 @@
   max-width: @tooltip-max-width;
   padding: 2px 10px;
   color: var(--rs-tooltip-text);
-  text-align: center; // TODO: remove align center?
   background-color: var(--rs-tooltip-bg);
   border-radius: @tooltip-border-radius;
   overflow-wrap: break-word;
